--- a/MyLibrary/MyLibrary.csproj
+++ b/MyLibrary/MyLibrary.csproj
@@ -8,4 +8,19 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="BooksDB.db" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="BooksDB.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.118" />
+  </ItemGroup>
+
 </Project>
